[package]
name = "irwin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
allogator = { workspace = true }
solana-pubkey = "2.2"
solana-program = "2.2"

[dev-dependencies]
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-signer = "2.2"
solana-transaction = "2.2"
litesvm = "0.6.1"
