[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
allogator = { workspace = true }
solana-pubkey = "2.2.1"
pinocchio = "0.8.2"
pinocchio-system = "0.2.3"
solana-program = "2.2.1"


[dev-dependencies]
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-signer = "2.2"
solana-transaction = "2.2"
litesvm = "0.6.1"
solana-account = "2.2.1"
